--- a/Code/Github-Issues/package.json
+++ b/Code/Github-Issues/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
+    "handlebars": "^4.0.0",
     "intl": "^1.2.5",
     "lodash": "^4.17.4",
     "rxjs": "^5.4.2",
